--- a/index.html
+++ b/index.html
@@ -86,19 +86,20 @@
         <div class="spinner"></div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
     <script>
         // Вставьте вашу конфигурацию Firebase здесь
         const firebaseConfig = {
-            // ЗАМЕНЕНЫ НА ВАШИ ЗНАЧЕНИЯ ИЗ ФАЙЛА объект конфигурации.txt
-            apiKey: "AIzaSyC1X7s800mXq2f84887289890215903021",
-            authDomain: "fire-inventory-12345.firebaseapp.com",
-            databaseURL: "https://fire-inventory-12345-default-rtdb.firebaseio.com/",
-            projectId: "fire-inventory-12345",
-            storageBucket: "fire-inventory-12345.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:123456789012:web:abc123def456ghi789jkl0"
+            apiKey: "AIzaSyBCEGJcATRCk00uscEp2jNAbipdL_sEQhA",
+            authDomain: "fire-inventory-sync.firebaseapp.com",
+            databaseURL: "https://fire-inventory-sync-default-rtdb.firebaseio.com",
+            pprojectId: "fire-inventory-sync",
+            storageBucket: "fire-inventory-sync.firebasestorage.app",
+            messagingSenderId: "88700645285",
+            appId: "1:88700645285:web:3d870f0eb2952e7477c24c"
         };
 
         // Инициализация Firebase
