--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     <script>
         // Вставьте вашу конфигурацию Firebase здесь
         const firebaseConfig = {
-            apiKey: "AIzaSyBCEGJcATRCk00uscEp2jNAbipdL_sEQhA",
-            authDomain: "fire-inventory-sync.firebaseapp.com",
-            databaseURL: "https://fire-inventory-sync-default-rtdb.firebaseio.com",
-            pprojectId: "fire-inventory-sync",
-            storageBucket: "fire-inventory-sync.firebasestorage.app",
-            messagingSenderId: "88700645285",
-            appId: "1:88700645285:web:3d870f0eb2952e7477c24c"
+            apiKey: "AIzaSyC1X7s800mXq2f84887289890215903021",
+            authDomain: "fire-inventory-12345.firebaseapp.com",
+            databaseURL: "https://fire-inventory-12345-default-rtdb.firebaseio.com/",
+            projectId: "fire-inventory-12345",
+            storageBucket: "fire-inventory-12345.appspot.com",
+            messagingSenderId: "123456789012",
+            appId: "1:123456789012:web:abc123def456ghi789jkl0"
         };
 
         // Инициализация Firebase
